XIVY-6584 Make text labels lighter color, split task details into components

--- a/workflow-ui/webContent/resources/css/workflow-ui.css
+++ b/workflow-ui/webContent/resources/css/workflow-ui.css
@@ -99,6 +99,11 @@ body .ui-datatable tbody tr.ui-datatable-even.ui-state-highlight {
   display: none;
 }
 
+.text-secondary {
+  opacity: 0.65;
+  font-size: 12px;
+}
+
 .task-detail-title {
   position: relative;
   margin-bottom: 14px;
