--- a/workflow-ui/webContent/includes/components/taskDetails/workflowEventsTable.xhtml
+++ b/workflow-ui/webContent/includes/components/taskDetails/workflowEventsTable.xhtml
@@ -3,27 +3,27 @@
   xmlns:c="http://xmlns.jcp.org/jsp/jstl/core" xmlns:ic="http://ivyteam.ch/jsf/component"
   xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions"
   xmlns:jc="http://java.sun.com/jsf/composite/components">
-    <p:dataTable id="events" var="event" value="#{tasksDetailsIvyDevWfBean.selectedTask.getWorkflowEvents()}" widgetVar="eventsTable"
+    <p:dataTable id="events" var="event" value="#{tasksDetailsIvyDevWfBean.selectedTask.workflowEvents}" widgetVar="eventsTable"
       emptyMessage="No Events found with given criteria" reflow="true">
 
-      <p:column headerText="Creation Date" sortBy="#{event.getEventTimestamp()}">
-        <h:outputText value="#{dateTimeIvyDevWfBean.getDateTime(event.getEventTimestamp())}"/>
+      <p:column headerText="Creation Date" sortBy="#{event.eventTimestamp}">
+        <h:outputText value="#{dateTimeIvyDevWfBean.getDateTime(event.eventTimestamp)}"/>
       </p:column>
 
       <p:column headerText="Event type" colspan="2">
-        <h:outputText value="#{event.getEventKind()}" id="eventType"/>
+        <h:outputText value="#{event.eventKind}" id="eventType"/>
       </p:column>
 
-      <p:column headerText="State" sortBy="#{event.getTaskState()}">
-        <h:outputText value="#{event.getTaskState()}" id="eventState"/>
+      <p:column headerText="State" sortBy="#{event.taskState}">
+        <h:outputText value="#{event.taskState}" id="eventState"/>
       </p:column>
 
-      <p:column headerText="Author" sortBy="#{event.getUserName()}">
+      <p:column headerText="Author" sortBy="#{event.userName}">
         <jc:user user="#{event.user}" id="eventAuthor"/>
       </p:column>
 
       <p:column headerText="Content">
-        <h:outputText value="#{tasksDetailsIvyDevWfBean.getWorkflowInfo(event)}" id="eventInfo"/>
+        <h:outputText value="#{tasksDetailsIvyDevWfBean.getWorkflowEventInfo(event)}" id="eventInfo"/>
       </p:column>
     </p:dataTable>
 </ui:composition>
