--- a/workflow-ui/webContent/includes/components/taskDetails/description.xhtml
+++ b/workflow-ui/webContent/includes/components/taskDetails/description.xhtml
@@ -49,7 +49,7 @@
       id="completedDate" />
 
     <h:outputText value="Description" />
-    <h:outputText value="#{tasksDetailsIvyDevWfBean.description}" id="taskDescription" />
+    <h:outputText value="#{tasksDetailsIvyDevWfBean.selectedTask.description}" id="taskDescription" />
   </p:panelGrid>
 
 </ui:composition>
