XIVY-6691 Stabilize tests

--- a/workflow-ui/webContent/includes/components/caseDetails/description.xhtml
+++ b/workflow-ui/webContent/includes/components/caseDetails/description.xhtml
@@ -29,7 +29,7 @@
     </h:outputText>
 
     <h:outputText value="Completed on" />
-    <h:outputText value="#{dateTimeIvyDevWfBean.getDetailTime(casesDetailsIvyDevWfBean.selectedCase.getEndTimestamp())}"
+    <h:outputText value="#{dateTimeIvyDevWfBean.getDetailedDateAndTime(casesDetailsIvyDevWfBean.selectedCase.getEndTimestamp())}"
       id="expiryDate" />
 
     <h:outputText value="Description" />
