--- a/dev-workflow-ui/webContent/resources/components/customFields.xhtml
+++ b/dev-workflow-ui/webContent/resources/components/customFields.xhtml
@@ -1,9 +1,13 @@
-<ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://xmlns.jcp.org/jsf/core"
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:f="http://xmlns.jcp.org/jsf/core"
   xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-  xmlns:c="http://xmlns.jcp.org/jsp/jstl/core" xmlns:ic="http://ivyteam.ch/jsf/component"
+  xmlns:cc="http://xmlns.jcp.org/jsf/composite" xmlns:ic="http://ivyteam.ch/jsf/component"
   xmlns:p="http://primefaces.org/ui" xmlns:pe="http://primefaces.org/ui/extensions">
+<cc:interface>
+  <cc:attribute name="customFields" />
+</cc:interface>
 
-  <p:dataTable id="customFieldsTable" var="field" value="#{casesDetailsIvyDevWfBean.customFields}">
+<cc:implementation>
+  <p:dataTable id="customFieldsTable" var="field" value="#{cc.attrs.customFields}">
     <p:column headerText="Name">
       <h:outputText value="#{field.name}"/>
     </p:column>
@@ -14,5 +18,5 @@
       <h:outputText value="#{field.type}"/>
     </p:column>
   </p:dataTable>
-
-</ui:composition>
+</cc:implementation>
+</html>
