--- a/dev-workflow-ui/webContent/includes/components/caseDetails/description.xhtml
+++ b/dev-workflow-ui/webContent/includes/components/caseDetails/description.xhtml
@@ -7,7 +7,7 @@
   <p:panelGrid columns="4" layout="grid" styleClass="ui-panelgrid-blank"
     columnClasses="no-padding-left text-secondary ui-g-6 ui-md-2, ui-g-6 ui-md-4, no-padding-left text-secondary ui-g-6 ui-md-2, ui-g-6 ui-md-4">
     <h:outputText value="Case ID" />
-    <h:outputText value="#{casesDetailsIvyDevWfBean.selectedCase.getId()}" />
+    <h:outputText value="#{casesDetailsIvyDevWfBean.selectedCase.getId()}" id="caseId"/>
 
     <h:outputText value="Case name" />
     <h:outputText value="#{casesDetailsIvyDevWfBean.selectedCase.getName()}" id="caseName" />
